Fixed anchor link issue with fixed header covering info

--- a/assets/styles/stylesheet.sass
+++ b/assets/styles/stylesheet.sass
@@ -4,12 +4,15 @@ $maroon: #6f2c3f
 $darkgrey: #6e6259
 $lightgrey: #D7D7D7
 
-/* *
-     outline: red solid 1px */
 a
     color: $goldenyellow
 a:hover
     color: darken($goldenyellow, 15%)
+h3
+    text-transform: uppercase
+    color: $maroon
+    padding: 2rem 0 1rem 0
+    text-shadow: .5px .5px white
 .body
     background: rgba($lightgrey, .5)
 .navbar
@@ -86,7 +89,7 @@ a:hover
     border-top: 1rem solid $goldenyellow
     background: lighten($darkblue, 10%)
     color: white
-    margin-bottom: 1rem
+    padding-bottom: 1rem
     .nav-item
         display: inline-block
         border-left: 2px solid $goldenyellow
@@ -123,11 +126,12 @@ a:hover
     
 .content-center
     text-align: center
-h3
-    text-transform: uppercase
-    color: $maroon
-    padding: 2rem 0 1rem 0
-    text-shadow: .5px .5px white
+.anchor
+    display: block
+    position: relative
+    top: -4rem
+    visibility: hidden
+
 
 //Accordian Job Section
 .accordion 
